<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background Image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">CO-Ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_gooing_all_out">ON GOOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_doeagminate_the_leage">Find a Team in your City And Doeagminate The Leage</string>
    <string name="get_started">Get Started</string>
    <string name="i_am_a">I Am A:</string>
    <string name="beginner">Beginner</string>
    <string name="pro">Pro</string>
    <string name="finish">Finish</string>
    <string name="search_league">kooking for a coed beginner league near you.....</string>
</resources>
